tests/fixtures/invalid/sum_str.py
# Cannot call sum() with Str
x = sum("hello")
